study rememberId and rememberMe

--- a/src/main/resources/messages/message_ko.properties
+++ b/src/main/resources/messages/message_ko.properties
@@ -9,3 +9,5 @@ NotBlank.memberVO.username=\uD544\uC218
 MemberVO.password.notEquals=\uBE44\uBC00\uBC88\uD638\uAC00 \uC77C\uCE58\uD558\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.
 MemberVO.username.duplicate=\uC911\uBCF5\uB41C \uC544\uC774\uB514 \uC785\uB2C8\uB2E4.
 MemberVO.join.result=\uAC00\uC785\uC774 \uC644\uB8CC\uB418\uC5C8\uC2B5\uB2C8\uB2E4.
+
+sessionManagement.logout.notice=\uB85C\uADF8\uC544\uC6C3 \uB418\uC5C8\uC2B5\uB2C8\uB2E4.
